<resources>
    <string name="app_name">eCommerceDemo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">New User? \nCreate account from here.</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="hint_password">Password</string>
    <string name="hint_user_name">User Name</string>

    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_place">Place (City)</string>
    <string name="btn_reset_pwd">Reset Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_item_details">ItemDetailsActivity</string>
    <string name="cart">Cart</string>
    <string name="something_wrong_happened_please_try_again">Something wrong happened, please try again</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="error_message">Something wrong happened, Pls try again</string>
    <string name="title_activity_payment">"Payment "</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Second fragment</string>
</resources>
